task: fix mistake: reduce arbitrary np hard -> new problem, as opposed to the other way around

--- a/src/pages/notes/CS 4820/ComplexityClasses.mdx
+++ b/src/pages/notes/CS 4820/ComplexityClasses.mdx
@@ -160,4 +160,4 @@ can be reduced to SAT
 general strategy:
 
 - show problem is NP
-- try to reduce problem to existing NP-complete
+- try to reduce arbitrary example of existing NP-complete problem into current problem
