task: updates from review

--- a/src/pages/notes/CS 4820/ComplexityClasses.mdx
+++ b/src/pages/notes/CS 4820/ComplexityClasses.mdx
@@ -147,3 +147,7 @@ must answer: for specific input \\(s\\), does there exist \\(t\\) of length \\(p
 can be reduced to SAT
 
 3SAT also reducable to SAT
+
+## Gadgets
+
+Small devices used in reductions to enforce conditions.
