--- a/src/pages/notes/CS 4820/NPCompleteness.mdx
+++ b/src/pages/notes/CS 4820/NPCompleteness.mdx
@@ -5,6 +5,12 @@ layout: ../../../layouts/Note.astro
 
 # Graph Coloring (8.7)
 
+<figure>
+  <figcaption>Graph Coloring Decision Question</figcaption>
+  Given a graph \\(G\\) and a value \\(k\\), is there a valid \\(k\\)-coloring of
+  \\(G\\)?
+</figure>
+
 Formal definition of \\(k\\)-coloring:
 
 \\[f: V\rightarrow \{1, 2, \dots, k\}]\\]
@@ -13,21 +19,31 @@ such that every edge \\(\(u, v\)\\), \\(f(u) \neq f(v)\\)
 
 Use cases: wire radio assignment, resource conflict prevention
 
-## NP Complete
+**NP Complete**
 
 Certificate: a valid k-coloring of graph; check for invalid edges and nodes
 
-## NP Hard
+**NP Hard**
 
 Reduce \\(\rightarrow\\) 3-SAT: build a graph where some 'top level' node cannot be colored if one or more of boolean vars \\(v_1, v_2, v_3\\) is false; use colors to represent true/false state (necessary to have a 'base' state too?)
 
 # Hamiltonian Cycle
 
-## NP Complete
+<figure>
+  <figcaption>Hamiltonian Cycle</figcaption>
+  Given a directed graph \\(G\\), a hamiltonian cycle is a path of nodes that visits
+  every node in the graph exactly once and loops back to the starting node.
+</figure>
+<figure>
+  <figcaption>Hamiltonian Decision Question</figcaption>
+  Given a directed graph \\(G\\), does it contain a Hamiltonian Cycle?
+</figure>
+
+**NP Complete**
 
 certificate: ordered list of vertices, checkable in poly time
 
-## NP Hard
+**NP Hard**
 
 Reduction to 3-SAT
 
@@ -37,11 +53,23 @@ Given some clause like \\((v_1 \vee v_2 \vee v_3)\\), we can encode the requirem
 
 # Traveling Salesman
 
+<figure>
+  <figcaption>TS Decision Question</figcaption>
+  Given a set of distances on \\(n\\) cities and a bound \\(D\\), is there a Hamiltonian
+  cycle of length at most \\(D\\)
+</figure>
+
 Reduction to Hamiltonian Cycle:
 
 make edges = 1; if salesman exists, then hamiltonian exists
 
 # Subset Sum (8.8)
+
+<figure>
+  <figcaption>Subset Sum Decision Question</figcaption>
+  Given a set of numbers \\(S\\) and some number \\(k\\), is there a subset of numbers
+  that add exactly to \\(k\\)?
+</figure>
 
 Reduction to 3DM (3-dimensional matching)
 
@@ -68,5 +96,3 @@ For the Vertex Cover Problem, a subset \\(S\\) of some graph \\(G=(V, E)\\) is a
   Given a graph \\(G=(V, E)\\) and an integer \\(k\\), does \\(G\\) contain a vertex
   cover of at least size \\(k\\)?
 </figure>
-
-# Gadgets
